<resources>
    <string name="app_name">BookDatabase</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="api_key">GpYj4awfNwkcEm6prgRnho6mE7FqIrXD8uqBbTT0</string>
    <string name="google_api_key">AIzaSyBckekh07Rt-D_Vpkg3A7E3BJpRoL8-yIs</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="change_layout_manager">Change Layout</string>

    <string name="header_action_search">search</string>
    <string name="menu_layout">Layout</string>
    <string name="menu_layout_grid">Grid layout</string>
    <string name="menu_layout_list">List layout</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_add_book">Add Book</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_extras">Extras</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="please_provide_the_isbn_code">Please Provide the ISBN code</string>
    <string name="isbn">isbn, only numbers</string>
    <string name="enter_the_book_manually">Enter the book manually</string>
    <string name="or">Or</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="Author">Author:</string>
    <string name="Title">Title:</string>
    <string name="published_date">Published Date:</string>
    <string name="published_date_hint">published Date</string>
    <string name="author_hint">author</string>
    <string name="title_hint">title</string>
    <string name="publisher">Publisher:</string>
    <string name="publisher_hint">publisher</string>
    <string name="personal_evaluation">Personal Evaluation:</string>
    <string name="personal_evaluation_hint">personal evaluation</string>
    <string name="category_hint">category</string>
    <string name="Category">Category:</string>
    <string name="search_by">Search by ISBN:</string>
    <string name="search">Search</string>
    <string name="sorry_no_books_found">Sorry no books found</string>
    <string name="forward">Forward</string>
    <string name="remove_book">Remove Book</string>
    <string name="book_has_been_marqued_for_removal">Book has been marked for removal,
        Proceed to confirm</string>
    <string name="undo">Undo</string>
    <string name="rating_updated">Rating Updated</string>
    <string name="remove">Remove</string>
    <string name="remoove_book_question">Do you want to Permanently remove this book?</string>
    <string name="delete">Delete</string>
    <string name="unread">Unread</string>
    <string name="mark_as_readed">Read</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="about">About</string>
    <string name="search_by_title">Search by title</string>
    <string name="search_by_category">Search by category</string>
    <string name="search_by_author">Search by author</string>
    <string name="missing_fields">Missing required fields</string>
    <string name="no_internet">Please check your internet access</string>
</resources>
