<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/header_action_search"
        android:icon="@drawable/ic_bar_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <group android:checkableBehavior="single"
        android:id="@+id/menu_search_group">

        <item android:title="@string/search_by_title"
            android:checked="true"
            android:id="@+id/menu_search_title" />

        <item android:title="@string/search_by_author"
            android:id="@+id/menu_search_author" />

        <item android:title="@string/search_by_category"
            android:id="@+id/menu_search_category" />

    </group>

</menu>
