<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="marcer.pau.bookdatabase.newBook.NewBook">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/viewbook_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        android:id="@+id/floatingActionButtonRemoveBook"
        app:layout_anchorGravity="bottom|left"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@android:color/holo_red_light"
        android:layout_margin="8dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:tint="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.90">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/viewbook_img"
                        android:layout_width="140dp"
                        android:layout_height="230dp"
                        android:scaleType="centerCrop"
                        android:cropToPadding="false"
                        android:adjustViewBounds="true"
                        android:background="@drawable/ic_book_launcher_black" />

                    <ToggleButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewbook_read_text"
                        android:textOn="@string/read"
                        android:layout_marginTop="8dp"
                        android:textOff="@string/unread" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewbook_title"
                        android:textAppearance="@android:style/TextAppearance.Material.Headline"
                        android:textSize="28sp"
                        tools:text="@string/Title"
                        android:textIsSelectable="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewbook_author"
                        android:textAppearance="@android:style/TextAppearance.Material.Large"
                        app:layout_row="2"
                        tools:text="@string/Author"
                        android:textIsSelectable="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewbook_pbdate"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="normal|bold"
                        tools:text="@string/published_date"
                        android:textIsSelectable="true" />

                    <TextView
                        android:text="@string/publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="normal|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewbook_publisher"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="normal|bold"
                        tools:text="@string/publisher"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:text="@string/Category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="normal|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewbook_category"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="normal|bold"
                        tools:text="@string/Category"
                        android:textIsSelectable="true" />

                    <TextView
                        android:text="Isbn:"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewbook_isbn_t" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewbook_isbn"
                        tools:text="@string/isbn"
                        android:textIsSelectable="true"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textStyle="normal|bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:text="@string/personal_evaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewbook_eval"
                android:rating="0"
                android:stepSize="1"
                android:numStars="5"
                android:layout_marginStart="8dp"
                android:progressTint="@color/duskYellow"
                android:progressBackgroundTint="@color/lightGrey" />

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>